[gd_scene load_steps=5 format=3 uid="uid://bp1k5anq0va0k"]

[ext_resource type="Script" uid="uid://dtyouaqfqpeog" path="res://UI/ShopItemBuyUI/shop_item_buy_ui.gd" id="1_fc53g"]
[ext_resource type="Texture2D" uid="uid://db71ydopcyp3x" path="res://UI/ShopUI/shop.png" id="2_0dily"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2ptum"]
resource_local_to_scene = true
atlas = ExtResource("2_0dily")
region = Rect2(0, 0, 16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0dily"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="HBoxContainerBuyItem" type="HBoxContainer"]
theme_override_constants/separation = 8
script = ExtResource("1_fc53g")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("AtlasTexture_2ptum")
expand_mode = 3

[node name="LabelText" type="Label" parent="."]
layout_mode = 2
text = "Hire Worker"

[node name="LabelHint" type="Label" parent="."]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_0dily")
text = "?"
horizontal_alignment = 1

[node name="LabelCost" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "($100)"
horizontal_alignment = 2

[node name="ButtonBuy" type="Button" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Buy"

[connection signal="pressed" from="ButtonBuy" to="." method="_on_button_buy_pressed"]
